[package]
name = "sexp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
futures = "0.3.23"
hex = "0.4.3"
ic-agent = "0.20.0"
serde_cbor = "0.11.2"
tokio = {version = "1.20.1", features = ["full"]}
